--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export("%notin%")
 export(comp_cols)
+export(compare)
 export(count_na)
 export(detect_duped)
 export(detect_na_intro)
@@ -15,11 +16,13 @@ export(map)
 export(map_at)
 export(na_zero)
 export(null_na)
+export(object_size)
 export(order_substr)
 export(prop_na)
 export(rev_setdiff)
 export(rm_outliers)
 export(rm_tmp)
+export(safely)
 export(save_list)
 export(set_cols)
 export(skim)
@@ -33,9 +36,12 @@ export(zero_na)
 importFrom(broom,tidy)
 importFrom(janitor,tabyl)
 importFrom(magrittr,"%>%")
+importFrom(pryr,object_size)
 importFrom(purrr,map)
 importFrom(purrr,map_at)
+importFrom(purrr,safely)
 importFrom(skimr,skim)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_split)
 importFrom(stringr,str_split_fixed)
+importFrom(waldo,compare)
