--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(detect_duped)
 export(detect_na_intro)
 export(detect_outliers)
 export(empty_na)
+export(fuzzy_check)
 export(fuzzy_match)
 export(ihs)
 export(lz_pad)
