--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,33 @@
 Package: coler
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Convenience functions and personal templates 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Cole Tanigawa-Lau
+Maintainer: Cole Tanigawa-Lau <coletl@stanford.edu>
+Description: This package holds my convenience functions and 
+    imports select functions from much larger packages. You may wish to install
+    without dependencies.
+Depends: 
+    R (>= 3.0)
+Imports:
+    data.table,
+    dplyr,
+    stringdist,
+    parallel,
+    stringr,
+    purrr,
+    ggplot2,
+    fst,
+    qs,
+    waldo,
+    skimr,
+    janitor,
+    broom,
+    magrittr
+Suggests:
+    rmarkdown,
+    ggplot2,
+    devtools
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
