Read rda/RData files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(na_zero)
 export(null_na)
 export(order_substr)
 export(prop_na)
+export(read_rda)
 export(rev_setdiff)
 export(rm_outliers)
 export(rm_tmp)
