--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,14 @@ export(count_na)
 export(detect_duped)
 export(detect_na_intro)
 export(detect_outliers)
+export(duped)
 export(empty_na)
 export(fuzzy_check)
 export(fuzzy_match)
 export(ihs)
 export(lz_pad)
 export(map)
+export(mcheck)
 export(na_zero)
 export(null_na)
 export(object_size)
